--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "MainProject/Assets/ExternalModules"]
 	path = MainProject/Assets/ExternalModules
-	url = https://github.com/kentaurus44/ExternalModules.git
+url=git@github.com:kentaurus44/ExternalModules.git
